force-app/main/default/objects/PEO_Onboarding_Checklist__c/PEO_Onboarding_Checklist__c.object-meta.xml
<CustomObject>
    <label>PEO Underwriting Checklist</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PEO Underwriting Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PEO Underwriting Checklists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>