force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Additional_Misc_Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Misc_Documents_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Misc Documents Required</label>
    <type>Checkbox</type>
</CustomField>