force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/annual_number_of_out_of_country_travel__c.field-meta.xml
<CustomField>
    <fullName>annual_number_of_out_of_country_travel__c</fullName>
    <label>Annual number of out of country travel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>