force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Any_bucket_trucks_or_scaffolding_used__c.field-meta.xml
<CustomField>
    <fullName>Any_bucket_trucks_or_scaffolding_used__c</fullName>
    <label>Any bucket trucks, or scaffolding used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>