force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Are_you_interested_in_offering_LTD__c.field-meta.xml
<CustomField>
    <fullName>Are_you_interested_in_offering_LTD__c</fullName>
    <label>Are you interested in offering LTD?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>