force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Benefit_Summaries_Required__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Summaries_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benefit Summaries Required</label>
    <type>Checkbox</type>
</CustomField>