force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/CensusRequired__c.field-meta.xml
<CustomField>
    <fullName>CensusRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Census Required</label>
    <type>Checkbox</type>
</CustomField>