force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Claims_Report_required__c.field-meta.xml
<CustomField>
    <fullName>Claims_Report_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claims Report Required</label>
    <type>Checkbox</type>
</CustomField>