force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Client_Id_user_agreement_acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>Client_Id_user_agreement_acknowledgment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the id for the client which acknowledged the community agreement</description>
    <label>EPLI Acknowledgment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PEO_Underwriting_Checklists1</relationshipName>
    <type>Lookup</type>
</CustomField>