force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/CS_CM_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_CM_Implementation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS CM Implementation Date</label>
    <type>Date</type>
</CustomField>