force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/CS_CM_WC_UW_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_CM_WC_UW_Submit_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS CM WC UW Submit Date</label>
    <type>DateTime</type>
</CustomField>