force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Do_you_offer_Life_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Do_you_offer_Life_Insurance__c</fullName>
    <label>Do you offer Life Insurance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>