force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/emp_out_of_state_trvl_ovrngth_transport__c.field-meta.xml
<CustomField>
    <fullName>emp_out_of_state_trvl_ovrngth_transport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>emp out of state trvl ovrngth transport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>