force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Financial_Underwriting_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Financial_Underwriting_Approval_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial Underwriting Approval Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>