force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Full_Time_Employees__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_Employees__c</fullName>
    <formula>Prospect_Client__r.Full_Time_Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Employees working 30 hours or more</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>