force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Has_active_Ohio_WC_Policy__c.field-meta.xml
<CustomField>
    <fullName>Has_active_Ohio_WC_Policy__c</fullName>
    <label>Has active Ohio WC Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>