force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Has_current_dental_carrier__c.field-meta.xml
<CustomField>
    <fullName>Has_current_dental_carrier__c</fullName>
    <description>If yes, Do you have a current Dental Carrier?</description>
    <label>Has current dental carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>