force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Health_Benefits_Currently_through_a_PEO__c.field-meta.xml
<CustomField>
    <fullName>Health_Benefits_Currently_through_a_PEO__c</fullName>
    <label>Health Benefits Currently through a PEO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>