force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Health_Insurance_Summary_required__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Summary_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Insurance Summary Required</label>
    <type>Checkbox</type>
</CustomField>