force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/HSF_Submission_Response__c.field-meta.xml
<CustomField>
    <fullName>HSF_Submission_Response__c</fullName>
    <description>The response received from Clientspace after the census was submitted</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The response received from Clientspace after the census was submitted</inlineHelpText>
    <label>Medical Census to Clientspace Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>