force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/HSF_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>HSF_Submission_Status__c</fullName>
    <description>The overall status of the census being sent to Clientspace</description>
    <inlineHelpText>The overall status of the census being sent to Clientspace</inlineHelpText>
    <label>Medical Census to Clientspace Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Sent to ClientSpace</fullName>
            </value>
            <value>
                <fullName>FAVORABLE</fullName>
            </value>
            <value>
                <fullName>UNFAVORABLE</fullName>
            </value>
            <value>
                <fullName>RESULTS INCONCLUSIVE</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
            <value>
                <fullName>Re Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>