force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Industry_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Industry_Record_Types__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Industry Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>