force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Interested_in_offering_Life_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_offering_Life_Insurance__c</fullName>
    <label>Interested in offering Life Insurance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>