force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Last_Change_Made__c.field-meta.xml
<CustomField>
    <fullName>Last_Change_Made__c</fullName>
    <description>Date that the last change was made to the Checklist record, or to any of its related records.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that the last change was made to the Checklist record, or to any of its related records.</inlineHelpText>
    <label>Last Change Made</label>
    <type>DateTime</type>
</CustomField>