force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Loss_Runs_required__c.field-meta.xml
<CustomField>
    <fullName>Loss_Runs_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loss Runs Required</label>
    <type>Checkbox</type>
</CustomField>