force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Medical_Benefits_Underwriting_Reques_del__c.field-meta.xml
<CustomField>
    <fullName>Medical_Benefits_Underwriting_Reques_del__c</fullName>
    <description>Sales rep to fill if medical benefits uw has been requested.</description>
    <label>Medical Benefits Underwriting Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>