force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Medical_Invoice_Required__c.field-meta.xml
<CustomField>
    <fullName>Medical_Invoice_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Invoice Required</label>
    <type>Checkbox</type>
</CustomField>