force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Medical_Underwriting_Path_Type__c.field-meta.xml
<CustomField>
    <fullName>Medical_Underwriting_Path_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Underwriting Path Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>