force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Miscellaneous_Docs_Required__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Docs_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Miscellaneous Docs Required Medical</label>
    <type>Checkbox</type>
</CustomField>