force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Miscellaneous_Docs_Required_WC__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Docs_Required_WC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Other Documents bucket Workers&apos; Compensation</description>
    <label>Miscellaneous Docs Required WC</label>
    <type>Checkbox</type>
</CustomField>