force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/no_retierment_plan_explanation__c.field-meta.xml
<CustomField>
    <fullName>no_retierment_plan_explanation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>no retierment plan explanation</label>
    <type>TextArea</type>
</CustomField>