force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Parent_PEO_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Parent_PEO_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent PEO Checklist</label>
    <referenceTo>PEO_Onboarding_Checklist__c</referenceTo>
    <relationshipLabel>Child PEO Underwriting Checklists</relationshipLabel>
    <relationshipName>PEO_Underwriting_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>