force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Payroll_Register_Required__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Register_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Register Required</label>
    <type>Checkbox</type>
</CustomField>