force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Peo_401k_SubmissionTime__c.field-meta.xml
<CustomField>
    <fullName>Peo_401k_SubmissionTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>401k Submit Time</label>
    <type>DateTime</type>
</CustomField>