force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Peo_Covid_formSubmissionTime__c.field-meta.xml
<CustomField>
    <fullName>Peo_Covid_formSubmissionTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COVID Submit Time</label>
    <type>DateTime</type>
</CustomField>