force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Peo_IndSpecific_formStatus__c.field-meta.xml
<CustomField>
    <fullName>Peo_IndSpecific_formStatus__c</fullName>
    <label>ISQ Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>