force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Peo_IndSpecific_formSubmissionTime__c.field-meta.xml
<CustomField>
    <fullName>Peo_IndSpecific_formSubmissionTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ISQ Submit Time</label>
    <type>DateTime</type>
</CustomField>