force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Peo_Medical_formStatus__c.field-meta.xml
<CustomField>
    <fullName>Peo_Medical_formStatus__c</fullName>
    <label>Medical Questionnaire Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>