force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Peo_WC_formStatus__c.field-meta.xml
<CustomField>
    <fullName>Peo_WC_formStatus__c</fullName>
    <label>WC Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Questionnaire_Status</valueSetName>
    </valueSet>
</CustomField>