force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <inlineHelpText>To be made aware of the platform that the Prospect is being sold on</inlineHelpText>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oasis</fullName>
            </value>
            <value>
                <fullName>Flex</fullName>
            </value>
            <value>
                <fullName>Paychex PEO</fullName>
                <isActive>false</isActive>
                <label>Paychex PEO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>