force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Process_for_COVID_Pos_Emp_work_return__c.field-meta.xml
<CustomField>
    <fullName>Process_for_COVID_Pos_Emp_work_return__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Process for COVID Pos Emp work return</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>