force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Prospect_Client__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the related account.</description>
    <label>Prospect-Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PEO_Onboarding_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>