force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/prsnl_driver_driving_radius__c.field-meta.xml
<CustomField>
    <fullName>prsnl_driver_driving_radius__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>prsnl driver driving radius</label>
    <length>255</length>
    <type>Text</type>
</CustomField>