force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Sales_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Sales_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The NBSC that this Checklist was Round-Robined to.</description>
    <inlineHelpText>The NBSC that this Checklist was Round-Robined to.</inlineHelpText>
    <label>NBSC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PEO_Underwriting_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>