force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This houses the lookup to the PEO sales rep.</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PEO_Onboarding_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>