force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Select_Child_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Select_Child_Accounts__c</fullName>
    <label>Select Child Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>