force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Send_Discrepancy_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Discrepancy_Email__c</fullName>
    <description>Functionality is provided to the Sales Analyst/NSC/NBSC to choose the template and the recipients to manually send an email from the Onboarding Checklist record</description>
    <inlineHelpText>Send discrepancy email notification to the Sales rep</inlineHelpText>
    <label>Send Sales Discrepancy Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>