force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Sent_to_ClientSpace_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_ClientSpace_Status_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sent to ClientSpace Status Date</label>
    <type>DateTime</type>
</CustomField>