force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Submit_Docs_to_Clientspace__c.field-meta.xml
<CustomField>
    <fullName>Submit_Docs_to_Clientspace__c</fullName>
    <inlineHelpText>Choose which documents will get sent to clientspace.  The client needs to be in a CS CM Contract Status of Prospect and the documents need to be approved</inlineHelpText>
    <label>Submit Docs to Clientspace</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>