force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Submit_to_Workers_Comp_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_Workers_Comp_Underwriting__c</fullName>
    <label>Submit to Workers&apos; Comp Underwriting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - WC to be reviewed</fullName>
            </value>
            <value>
                <fullName>Yes - WC to be excluded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>