force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/SUI_Required__c.field-meta.xml
<CustomField>
    <fullName>SUI_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SUI Required</label>
    <type>Checkbox</type>
</CustomField>