force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/Total_number_WSE__c.field-meta.xml
<CustomField>
    <fullName>Total_number_WSE__c</fullName>
    <formula>IF((  Total_of_WSE__c &lt;20), &apos;&lt;20&apos;,
  IF(( Total_of_WSE__c &lt;50), &apos;20-50&apos;, &apos;&gt;50&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total number WSE</label>
    <type>Text</type>
</CustomField>