force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/View_in_Clientspace__c.field-meta.xml
<CustomField>
    <fullName>View_in_Clientspace__c</fullName>
    <formula>IF (NOT(ISBLANK( Client_Master_ID__c )) , &apos;https://cs.oasisadvantage.com/next/linkto/ClientMaster/&apos;+Client_Master_ID__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View in Clientspace</label>
    <type>Text</type>
</CustomField>