force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/WC_Declarations_Required__c.field-meta.xml
<CustomField>
    <fullName>WC_Declarations_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WC Declarations Required</label>
    <type>Checkbox</type>
</CustomField>