force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/WC_RatesAndPricing_Required__c.field-meta.xml
<CustomField>
    <fullName>WC_RatesAndPricing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Health_Benefits_Currently_through_a_PEO__c is Yes then this field is true</description>
    <label>WC RatesAndPricing Required</label>
    <type>Checkbox</type>
</CustomField>