force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/WCClassesWages_Required__c.field-meta.xml
<CustomField>
    <fullName>WCClassesWages_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if WC Classes and Wages is required or not</description>
    <label>WC Classes And Wages Required</label>
    <type>Checkbox</type>
</CustomField>