force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/why_choose_full_underwriting_path__c.field-meta.xml
<CustomField>
    <fullName>why_choose_full_underwriting_path__c</fullName>
    <label>why choose full underwriting path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker Submission</fullName>
            </value>
            <value>
                <fullName>Client required side by side Medical comparison</fullName>
            </value>
            <value>
                <fullName>Need support of NBSC</fullName>
            </value>
            <value>
                <fullName>Client Add-on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>