force-app/main/default/objects/PEO_Onboarding_Checklist__c/fields/wrk_underground_or_10_ft_above__c.field-meta.xml
<CustomField>
    <fullName>wrk_underground_or_10_ft_above__c</fullName>
    <label>wrk underground or 10 ft above</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>