force-app/main/default/objects/PEO_Onboarding_Checklist__c/recordTypes/Oasis.recordType-meta.xml
<RecordType>
    <fullName>Oasis</fullName>
    <active>true</active>
    <label>Oasis</label>
</RecordType>