force-app/main/default/objects/PEO_Onboarding_Checklist__c/recordTypes/PEO_Sales.recordType-meta.xml
<RecordType>
    <fullName>PEO_Sales</fullName>
    <active>true</active>
    <label>PEO Sales</label>
</RecordType>